--- a/index.html
+++ b/index.html
@@ -18,40 +18,105 @@
 
 <div class="content-wrapper">
   <section id="intro" class="sectionRow">
-    <div class="introImg"></div>
-    <div class="introText"></div>
-  </section>
+    <div class="introImg">
+      <img src="./images/intro.jpg" alt="">
+    </div>
+    <div class="introText">
+      <h1>Twice the Choices!</h1>
+      <h5>Open your eyes to infinite new looks!</h5>
+      <p>Now, it's easier than ever to find your perfect mascara. Choose from our high-performance Japanese tube technology or triple-fiber gel formulations.</p>
+    </div>
+  </section> <!-- intro -->
   <section id="products" class="sectionRow">
     <div class="slm">
-      <div class="slmCopy"></div>
-      <div class="slmImg"></div>
+      <div class="slmCopy">
+        <h3>NEW Super Long Mascara EX</h3>
+        <p>Dramatic length and advanced protection</p>
+      </div>
+      <div class="slmImg">
+        <img src="./images/slm.jpg" alt="">
+      </div>
     </div>
     <div class="mpp">
-      <div class="mppImg"></div>
-      <div class="mppText"></div>
+      <div class="mppImg">
+        <img src="./images/mpp.jpg" alt="">
+      </div>
+      <div class="mppText">
+        <h3>Mascara Perfect Pro Double Protection</h3>
+        <p>Brilliant definition and long-lasting wear</p>
+      </div>
     </div>
-  </section>
+  </section> <!-- products -->
   <section id="choose" class="sectionRow">
-    <div class="chooseTitle"></div>
-    <div class="chooseMpp">
-      <div class="chooseMpp-img"></div>
-       <div class="chooseMpp-text"></div>
+    <div class="chooseTitle">
+      <h2>Choose when you want</h2>
     </div>
     <div class="chooseSlm">
-      <div class="chooseSlm-text"></div>
-      <div class="chooseSlm-img"></div>
+      <div class="chooseSlm-text">
+        <h4>Lush, long fringe for maximum impact.</h4>
+        <p>Our advanced Japanese formula blends lash fibers of 3 different lengths for a more dramatic lengthening effect. Enjoy your most striking lash look yet.</p>
+      </div>
+      <div class="chooseSlm-img">
+        <img src="./images/choose-slm.jpg" alt="">
+      </div>
     </div>
-  </section>
+    <div class="chooseMpp">
+      <div class="chooseMpp-img">
+        <img src="./images/choose-mpp.jpg" alt="">
+      </div>
+       <div class="chooseMpp-text">
+         <h4>A polished, but natural, look for everyday wear.</h4>
+         <p>Innovative Japanese tube technology wraps each lash in polymer tubes for budge-proof wear. Fine-bristled brush offers precise application on the tiniest lashes.</p>
+       </div>
+    </div>
+  </section> <!-- choose -->
   <section id="differences" class="sectionRow">
-    <div class="differencesText-l"></div>
-    <div class="differencesText-r"></div>
-  </section>
-  <section id="remove" class="sectionRow">
-    <div class="beforeAfter">
-      <div class="beforeAfter-l"></div>
-      <div class="beforeAfter-r"></div>
+    <div class="differenceTitle">
+      <h2>Why it’s different</h2>
     </div>
-  </section>
+    <div class="differencesText-l">
+      <ul>
+        <l1>Our proprietary gel formula binds fibers of three different lengths for a more natural lengthening effect.</l1>
+        <l1>Buildable hydrolyzed silk formula creates long, lush fringe that lasts up to eight hours without smudging.</l1>
+        <l1>Curved brush makes it easy to apply with precision while adding a gentle curl.</l1>
+        <l1>Nourishing complex of vitamin E, olive oil, panthenol and silk protein helps to fortify and strengthen lashes.</l1>
+        <li>Water-resistant formula.</li>
+      </ul>
+    </div>
+    <div class="differencesText-r">
+      <ul>
+        <l1>Japanese tube technology creates a strong, water-resistant tube around each lash with flexible polymers.</l1>
+        <l1>Lengthens and defines lashes without flaking, smearing or clumping.</l1>
+        <l1>Fine-bristled, flexible wand reaches the tiniest lashes, even on the lower lash line.</l1>
+        <l1>Elegant, glossy black looks great with all skin tones.</l1>
+        <li>Comes off in warm water—no makeup remover required.</li>
+        <li>Conditions lashes with vitamin E.</li>
+      </ul>
+    </div>
+  </section> <!-- differences -->
+  <section id="remove" class="sectionRow">
+    <div class="beforeAfter-title">
+      <h2>Before & After</h2>
+    </div> <!-- beforeAfter title-->
+    <div class="beforeAfter-l">
+      <div class="beforeAfter-imgs">
+        <img src="./images/eyse-l.jpg" alt="">
+      </div>
+      <div class="beforeAfter-text">
+        <h4>Tip for removal</h4>
+        <p>Remove with Eye & Lip Makeup Remover with Silky Cotton.</p>
+      </div>
+    </div> <!-- beforeAfter L -->
+    <div class="beforeAfter-r">
+      <div class="beforeAfter-imgs">
+        <img src="./images/eyes-r.jpg" alt="">
+      </div>
+      <div class="beforeAfter-text">
+        <h4>Easy removal</h4>
+        <p>Our tube technology mascara is formulated to rinse off in warm water. Just wet hands and gently massage the mascara away from the lashes with your fingertips.</p>
+      </div>
+    </div> <!-- beforeAfter R -->
+  </section> <!-- remove -->
 </div> <!-- content wrapper -->
 
 </body>
