--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./ae-css/8213.css">
   <link rel="stylesheet" href="./ae-css/styles-l.css">
-  <script type="text/javascript" src="./slick/slick.min.js"></script>
   <script type="text/javascript" src="./lib/jquery-1.12.4.min.js"></script>
+  <script type="text/javascript" src="./slick/slick.min.js"></script>
   <script type="text/javascript" src="./src/js/mascara.js"></script>
   <link rel="stylesheet" href="./dest/css/styles.css">
   <!-- <link rel="stylesheet" href="./slick/slick.css"/>
@@ -18,104 +18,121 @@
 
 <div class="content-wrapper">
   <section id="intro" class="sectionRow">
-    <div class="introImg">
+    <div class="introImg width50">
       <img src="./images/intro.jpg" alt="">
     </div>
-    <div class="introText">
+    <div class="introText width50">
       <h1>Twice the Choices!</h1>
       <h5>Open your eyes to infinite new looks!</h5>
       <p>Now, it's easier than ever to find your perfect mascara. Choose from our high-performance Japanese tube technology or triple-fiber gel formulations.</p>
+      <h6><a class="btn" href="https://www.dhccare.com/mascara-perfect-pro-double-protection.html">Shop Now</a></h6>
     </div>
   </section> <!-- intro -->
-  <section id="products" class="sectionRow">
-    <div class="slm">
-      <div class="slmCopy">
+  <section id="products">
+    <div class="slm sectionRow">
+      <div class="slmText width50">
         <h3>NEW Super Long Mascara EX</h3>
         <p>Dramatic length and advanced protection</p>
       </div>
-      <div class="slmImg">
+      <div class="slmImg width50">
         <img src="./images/slm.jpg" alt="">
       </div>
     </div>
-    <div class="mpp">
-      <div class="mppImg">
+    <div class="mpp sectionRow">
+      <div class="mppImg width50">
         <img src="./images/mpp.jpg" alt="">
       </div>
-      <div class="mppText">
+      <div class="mppText width50">
         <h3>Mascara Perfect Pro Double Protection</h3>
         <p>Brilliant definition and long-lasting wear</p>
       </div>
     </div>
   </section> <!-- products -->
-  <section id="choose" class="sectionRow">
+  <section id="choose">
     <div class="chooseTitle">
       <h2>Choose when you want</h2>
     </div>
-    <div class="chooseSlm">
-      <div class="chooseSlm-text">
+    <div class="chooseSlm sectionRow">
+      <div class="chooseSlm-img width50">
+        <img src="./images/choose-slm.jpg" alt="">
+      </div>
+      <div class="chooseSlm-text width50">
         <h4>Lush, long fringe for maximum impact.</h4>
         <p>Our advanced Japanese formula blends lash fibers of 3 different lengths for a more dramatic lengthening effect. Enjoy your most striking lash look yet.</p>
       </div>
-      <div class="chooseSlm-img">
-        <img src="./images/choose-slm.jpg" alt="">
-      </div>
+
     </div>
-    <div class="chooseMpp">
-      <div class="chooseMpp-img">
-        <img src="./images/choose-mpp.jpg" alt="">
-      </div>
-       <div class="chooseMpp-text">
+    <div class="chooseMpp sectionRow">
+       <div class="chooseMpp-text width50">
          <h4>A polished, but natural, look for everyday wear.</h4>
          <p>Innovative Japanese tube technology wraps each lash in polymer tubes for budge-proof wear. Fine-bristled brush offers precise application on the tiniest lashes.</p>
        </div>
+       <div class="chooseMpp-img width50">
+         <img src="./images/choose-mpp.jpg" alt="">
+       </div>
     </div>
   </section> <!-- choose -->
-  <section id="differences" class="sectionRow">
+  <section id="differences">
     <div class="differenceTitle">
       <h2>Why it’s different</h2>
     </div>
-    <div class="differencesText-l">
-      <ul>
-        <l1>Our proprietary gel formula binds fibers of three different lengths for a more natural lengthening effect.</l1>
-        <l1>Buildable hydrolyzed silk formula creates long, lush fringe that lasts up to eight hours without smudging.</l1>
-        <l1>Curved brush makes it easy to apply with precision while adding a gentle curl.</l1>
-        <l1>Nourishing complex of vitamin E, olive oil, panthenol and silk protein helps to fortify and strengthen lashes.</l1>
-        <li>Water-resistant formula.</li>
-      </ul>
+    <div class="differences-l">
+
+      <div class="differencesText-l">
+        <ul>
+          <li>Our proprietary gel formula binds fibers of three different lengths for a more natural lengthening effect.</li>
+          <li>Buildable hydrolyzed silk formula creates long, lush fringe that lasts up to eight hours without smudging.</li>
+          <li>Curved brush makes it easy to apply with precision while adding a gentle curl.</li>
+          <li>Nourishing complex of vitamin E, olive oil, panthenol and silk protein helps to fortify and strengthen lashes.</li>
+          <li>Water-resistant formula.</li>
+        </ul>
+      </div>
+      <div class="differences-img">
+        <img src="./images/differences-l.jpg" alt="">
+      </div>
     </div>
-    <div class="differencesText-r">
-      <ul>
-        <l1>Japanese tube technology creates a strong, water-resistant tube around each lash with flexible polymers.</l1>
-        <l1>Lengthens and defines lashes without flaking, smearing or clumping.</l1>
-        <l1>Fine-bristled, flexible wand reaches the tiniest lashes, even on the lower lash line.</l1>
-        <l1>Elegant, glossy black looks great with all skin tones.</l1>
-        <li>Comes off in warm water—no makeup remover required.</li>
-        <li>Conditions lashes with vitamin E.</li>
-      </ul>
+    <div class="differences-r">
+      <div class="differences-img">
+        <img src="./images/differences-r.jpg" alt="">
+      </div>
+      <div class="differencesText-r">
+        <ul>
+          <li>Japanese tube technology creates a strong, water-resistant tube around each lash with flexible polymers.</li>
+          <li>Lengthens and defines lashes without flaking, smearing or clumping.</li>
+          <li>Fine-bristled, flexible wand reaches the tiniest lashes, even on the lower lash line.</li>
+          <li>Elegant, glossy black looks great with all skin tones.</li>
+          <li>Comes off in warm water—no makeup remover required.</li>
+          <li>Conditions lashes with vitamin E.</li>
+        </ul>
+      </div>
+
     </div>
+    <div class="clearfix"></div>
   </section> <!-- differences -->
-  <section id="remove" class="sectionRow">
+  <section id="beforeAfter">
     <div class="beforeAfter-title">
       <h2>Before & After</h2>
     </div> <!-- beforeAfter title-->
-    <div class="beforeAfter-l">
-      <div class="beforeAfter-imgs">
-        <img src="./images/eyse-l.jpg" alt="">
-      </div>
-      <div class="beforeAfter-text">
-        <h4>Tip for removal</h4>
-        <p>Remove with Eye & Lip Makeup Remover with Silky Cotton.</p>
-      </div>
-    </div> <!-- beforeAfter L -->
-    <div class="beforeAfter-r">
-      <div class="beforeAfter-imgs">
-        <img src="./images/eyes-r.jpg" alt="">
-      </div>
-      <div class="beforeAfter-text">
-        <h4>Easy removal</h4>
-        <p>Our tube technology mascara is formulated to rinse off in warm water. Just wet hands and gently massage the mascara away from the lashes with your fingertips.</p>
-      </div>
-    </div> <!-- beforeAfter R -->
+    <div class="beforeAfter-wrapper sectionRow">
+      <div class="beforeAfter-l width50">
+        <div class="beforeAfter-imgs">
+          <img src="./images/eyes-l.jpg" alt="">
+        </div>
+        <div class="beforeAfter-text">
+          <h4>Tip for removal</h4>
+          <p>Remove with Eye & Lip Makeup Remover with Silky Cotton.</p>
+        </div>
+      </div> <!-- beforeAfter L -->
+      <div class="beforeAfter-r width50">
+        <div class="beforeAfter-imgs">
+          <img src="./images/eyes-r.jpg" alt="">
+        </div>
+        <div class="beforeAfter-text">
+          <h4>Easy removal</h4>
+          <p>Our tube technology mascara is formulated to rinse off in warm water. Just wet hands and gently massage the mascara away from the lashes with your fingertips.</p>
+        </div>
+      </div> <!-- beforeAfter R -->
+    </div>
   </section> <!-- remove -->
 </div> <!-- content wrapper -->
 
