further 1st draft

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
       <img src="./images/intro.jpg" alt="">
     </div>
     <div class="introText width50">
-      <h1>Twice the Choices!</h1>
+      <h1>Mascaras for <br>Every Mood</h1>
       <h5>Open your eyes to infinite new looks!</h5>
       <p>Now, it's easier than ever to find your perfect mascara. Choose from our high-performance Japanese tube technology or triple-fiber gel formulations.</p>
-      <h6><a class="btn" href="https://www.dhccare.com/mascara-perfect-pro-double-protection.html">Shop Now</a></h6>
+      <h6><a class="btn" href="https://www.dhccare.com/dhc-mascaras">Shop Now</a></h6>
     </div>
   </section> <!-- intro -->
   <section id="products">
     <div class="slm sectionRow">
       <div class="slmText width50">
-        <h3>NEW Super Long Mascara EX</h3>
+        <h3>NEW Super Long <br>Mascara EX</h3>
         <p>Dramatic length and advanced protection</p>
       </div>
       <div class="slmImg width50">
@@ -43,53 +43,46 @@
         <img src="./images/mpp.jpg" alt="">
       </div>
       <div class="mppText width50">
-        <h3>Mascara Perfect Pro Double Protection</h3>
+        <h3>Mascara Perfect Pro <br>Double Protection</h3>
         <p>Brilliant definition and long-lasting wear</p>
       </div>
     </div>
   </section> <!-- products -->
   <section id="choose">
-    <div class="chooseTitle">
-      <h2>Choose when you want</h2>
-    </div>
     <div class="chooseSlm sectionRow">
-      <div class="chooseSlm-img width50">
-        <img src="./images/choose-slm.jpg" alt="">
-      </div>
       <div class="chooseSlm-text width50">
+        <h2>Choose When You Want ...</h2>
         <h4>Lush, long fringe for maximum impact.</h4>
         <p>Our advanced Japanese formula blends lash fibers of 3 different lengths for a more dramatic lengthening effect. Enjoy your most striking lash look yet.</p>
       </div>
-
+      <div class="chooseSlm-img width50">
+        <img src="./images/slm-ribbon.jpg" alt="">
+      </div>
     </div>
     <div class="chooseMpp sectionRow">
+      <div class="chooseMpp-img width50">
+        <img src="./images/mpp-ribbon.jpg" alt="">
+      </div>
        <div class="chooseMpp-text width50">
+         <h2>Choose When You Want ...</h2>
          <h4>A polished, but natural, look for everyday wear.</h4>
          <p>Innovative Japanese tube technology wraps each lash in polymer tubes for budge-proof wear. Fine-bristled brush offers precise application on the tiniest lashes.</p>
-       </div>
-       <div class="chooseMpp-img width50">
-         <img src="./images/choose-mpp.jpg" alt="">
-       </div>
+      </div>
     </div>
   </section> <!-- choose -->
   <section id="differences">
-    <div class="differenceTitle">
-      <h2>Why it’s different</h2>
-    </div>
     <div class="differences-l">
-
+      <div class="differences-img">
+        <img src="./images/differences-l.jpg" alt="">
+      </div>
       <div class="differencesText-l">
         <ul>
           <li>Our proprietary gel formula binds fibers of three different lengths for a more natural lengthening effect.</li>
           <li>Buildable hydrolyzed silk formula creates long, lush fringe that lasts up to eight hours without smudging.</li>
           <li>Curved brush makes it easy to apply with precision while adding a gentle curl.</li>
-          <li>Nourishing complex of vitamin E, olive oil, panthenol and silk protein helps to fortify and strengthen lashes.</li>
-          <li>Water-resistant formula.</li>
         </ul>
       </div>
-      <div class="differences-img">
-        <img src="./images/differences-l.jpg" alt="">
-      </div>
+
     </div>
     <div class="differences-r">
       <div class="differences-img">
@@ -100,14 +93,13 @@
           <li>Japanese tube technology creates a strong, water-resistant tube around each lash with flexible polymers.</li>
           <li>Lengthens and defines lashes without flaking, smearing or clumping.</li>
           <li>Fine-bristled, flexible wand reaches the tiniest lashes, even on the lower lash line.</li>
-          <li>Elegant, glossy black looks great with all skin tones.</li>
-          <li>Comes off in warm water—no makeup remover required.</li>
-          <li>Conditions lashes with vitamin E.</li>
         </ul>
       </div>
-
     </div>
-    <div class="clearfix"></div>
+    <div class="proTips clearfix">
+      <h4>Pro tips:</h4>
+      <p>Apply Mascara Perfect Pro Double Protection as a base, and top off with one or two coats of Super Long Mascara EX.</p>
+    </div>
   </section> <!-- differences -->
   <section id="beforeAfter">
     <div class="beforeAfter-title">
@@ -119,7 +111,7 @@
           <img src="./images/eyes-l.jpg" alt="">
         </div>
         <div class="beforeAfter-text">
-          <h4>Tip for removal</h4>
+          <h4>How to remove</h4>
           <p>Remove with Eye & Lip Makeup Remover with Silky Cotton.</p>
         </div>
       </div> <!-- beforeAfter L -->
@@ -128,8 +120,8 @@
           <img src="./images/eyes-r.jpg" alt="">
         </div>
         <div class="beforeAfter-text">
-          <h4>Easy removal</h4>
-          <p>Our tube technology mascara is formulated to rinse off in warm water. Just wet hands and gently massage the mascara away from the lashes with your fingertips.</p>
+          <h4>How to remove</h4>
+          <p>Wet hands and gently massage the mascara away from the lashes with your fingertips.</p>
         </div>
       </div> <!-- beforeAfter R -->
     </div>
