desktop draft almost complete - need lower images

--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
   </section> <!-- products -->
   <section id="choose">
     <div class="chooseSlm sectionRow">
-      <div class="chooseSlm-text width50">
-        <h3>Choose When You Want ...</h3>
+      <div class="chooseSlm-text">
+        <h3>Choose When <br>You Want ...</h3>
         <h4>Lush, long fringe for maximum impact.</h4>
         <p>Our advanced Japanese formula blends lash fibers of 3 different lengths for a more dramatic lengthening effect. Enjoy your most striking lash look yet.</p>
       </div>
-      <div class="chooseSlm-img width50">
+      <div class="chooseSlm-img">
         <img src="./images/slm-ribbon.jpg" alt="">
       </div>
     </div>
     <div class="chooseMpp sectionRow">
-      <div class="chooseMpp-img width50">
+      <div class="chooseMpp-img">
         <img src="./images/mpp-ribbon.jpg" alt="">
       </div>
-       <div class="chooseMpp-text width50">
-         <h3>Choose When You Want ...</h3>
+       <div class="chooseMpp-text">
+         <h3>Choose When <br>You Want ...</h3>
          <h4>A polished, but natural, look for everyday wear.</h4>
          <p>Innovative Japanese tube technology wraps each lash in polymer tubes for budge-proof wear. Fine-bristled brush offers precise application on the tiniest lashes.</p>
       </div>
@@ -96,8 +96,8 @@
         </ul>
       </div>
     </div>
-    <div class="proTips clearfix">
-      <h4>Pro tips:</h4>
+    <div class="proTip">
+      <h4>Pro tip:</h4>
       <p>Apply Mascara Perfect Pro Double Protection as a base, and top off with one or two coats of Super Long Mascara EX.</p>
     </div>
   </section> <!-- differences -->
@@ -107,21 +107,25 @@
     </div> <!-- beforeAfter title-->
     <div class="beforeAfter-wrapper sectionRow">
       <div class="beforeAfter-l width50">
+        <h5>Mascara Perfect Pro Double Protection</h5>
         <div class="beforeAfter-imgs">
           <img src="./images/eyes-l.jpg" alt="">
+          <h6>before <span>after</span></h6>
         </div>
         <div class="beforeAfter-text">
-          <h4>How to remove</h4>
-          <p>Remove with Eye & Lip Makeup Remover with Silky Cotton.</p>
+          <h4>How to remove Mascara Perfect Pro:</h4>
+          <p>Wet hands and gently massage the mascara away from the lashes with your fingertips.</p>
         </div>
       </div> <!-- beforeAfter L -->
       <div class="beforeAfter-r width50">
+        <h5>Super Long Mascara EX</h5>
         <div class="beforeAfter-imgs">
           <img src="./images/eyes-r.jpg" alt="">
+          <h6>before <span>after</span></h6>
         </div>
         <div class="beforeAfter-text">
-          <h4>How to remove</h4>
-          <p>Wet hands and gently massage the mascara away from the lashes with your fingertips.</p>
+          <h4>How to remove Super Long Mascara EX:</h4>
+          <p>Remove with <a href="https://www.dhccare.com/eye-lip-makeup-remover.html">Eye & Lip Makeup Remover</a> with <a href="https://www.dhccare.com/silky-cotton.html">Silky Cotton</a>.</p>
         </div>
       </div> <!-- beforeAfter R -->
     </div>
