--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
 
 <div class="content-wrapper">
   <section id="intro" class="sectionRow">
-    <div class="introImg width50">
-      <img src="./images/intro.jpg" alt="">
+    <div class="introImg">
+      <picture>
+        <source srcset="./images/intro-m.jpg" media="(max-width: 599px)" />
+        <source srcset="./images/intro-t.jpg" media="(max-width: 1024px)" />
+        <img src="./images/intro.jpg" alt="the DHC Mascara Collection" />
+      </picture>
     </div>
-    <div class="introText width50">
+    <div class="introText">
       <h1>Mascaras for <br>Every Mood</h1>
       <h5>Open your eyes to infinite new looks!</h5>
       <p>Now, it's easier than ever to find your perfect mascara. Choose from our high-performance Japanese tube technology or triple-fiber gel formulations.</p>
@@ -31,19 +35,19 @@
   <section id="products">
     <div class="slm sectionRow">
       <div class="slmText width50">
-        <h2>NEW Super Long <br>Mascara EX</h2>
+        <h2><span class="font400">NEW</span> Super Long<br>Mascara EX</h2>
         <p>Dramatic length and advanced protection</p>
       </div>
-      <div class="slmImg width50">
+      <div class="slmImg">
         <img src="./images/slm.jpg" alt="">
       </div>
     </div>
     <div class="mpp sectionRow">
-      <div class="mppImg width50">
+      <div class="mppImg">
         <img src="./images/mpp.jpg" alt="">
       </div>
       <div class="mppText width50">
-        <h2>Mascara Perfect Pro <br>Double Protection</h2>
+        <h2>Mascara Perfect Pro<br>Double Protection</h2>
         <p>Brilliant definition and long-lasting wear</p>
       </div>
     </div>
@@ -52,7 +56,7 @@
     <div class="chooseSlm sectionRow">
       <div class="chooseSlm-text">
         <h3>Choose When <br>You Want ...</h3>
-        <h4>Lush, long fringe for maximum impact.</h4>
+        <h4>Lush, long fringe for<br>maximum impact.</h4>
         <p>Our advanced Japanese formula blends lash fibers of 3 different lengths for a more dramatic lengthening effect. Enjoy your most striking lash look yet.</p>
       </div>
       <div class="chooseSlm-img">
@@ -65,7 +69,7 @@
       </div>
        <div class="chooseMpp-text">
          <h3>Choose When <br>You Want ...</h3>
-         <h4>A polished, but natural, look for everyday wear.</h4>
+         <h4>A polished, but natural,<br>look for everyday wear.</h4>
          <p>Innovative Japanese tube technology wraps each lash in polymer tubes for budge-proof wear. Fine-bristled brush offers precise application on the tiniest lashes.</p>
       </div>
     </div>
@@ -73,7 +77,11 @@
   <section id="differences">
     <div class="differences-l">
       <div class="differences-img">
-        <img src="./images/differences-l.jpg" alt="">
+        <picture>
+          <source srcset="./images/side-by-side-mpp-m.jpg" media="(max-width: 599px)" />
+          <img src="./images/side-by-side-mpp.jpg" alt="">
+        </picture>
+
       </div>
       <div class="differencesText-l">
         <ul>
@@ -86,7 +94,10 @@
     </div>
     <div class="differences-r">
       <div class="differences-img">
-        <img src="./images/differences-r.jpg" alt="">
+        <picture>
+          <source srcset="./images/side-by-side-slm-m.jpg" media="(max-width: 599px)" />
+          <img src="./images/side-by-side-slm.jpg" alt="">
+        </picture>
       </div>
       <div class="differencesText-r">
         <ul>
@@ -105,23 +116,27 @@
     <div class="beforeAfter-title">
       <h2>Before & After</h2>
     </div> <!-- beforeAfter title-->
-    <div class="beforeAfter-wrapper sectionRow">
-      <div class="beforeAfter-l width50">
+    <div class="beforeAfter-wrapper">
+      <div class="beforeAfter-l">
         <h5>Mascara Perfect Pro Double Protection</h5>
         <div class="beforeAfter-imgs">
-          <img src="./images/eyes-l.jpg" alt="">
-          <h6>before <span>after</span></h6>
+          <img class="beforeImg" src="./images/mpp-before.jpg" alt="before applying Mascara Perfect Pro Double Protection">
+          <img src="./images/mpp-after.jpg" alt="after applying Mascara Perfect Pro Double Protection">
+          <h6 class="beforeText">Before</h6>
+          <h6>After</h6>
         </div>
         <div class="beforeAfter-text">
           <h4>How to remove Mascara Perfect Pro:</h4>
           <p>Wet hands and gently massage the mascara away from the lashes with your fingertips.</p>
         </div>
       </div> <!-- beforeAfter L -->
-      <div class="beforeAfter-r width50">
-        <h5>Super Long Mascara EX</h5>
+      <div class="beforeAfter-r">
+        <h5><span class="font400">NEW</span> Super Long Mascara EX</h5>
         <div class="beforeAfter-imgs">
-          <img src="./images/eyes-r.jpg" alt="">
-          <h6>before <span>after</span></h6>
+          <img class="beforeImg" src="./images/slm-before.jpg" alt="before applying Super Long Mascara EX">
+          <img src="./images/slm-after.jpg" alt="after applying Super Long Mascara EX">
+          <h6 class="beforeText">Before</h6>
+          <h6>After</h6>
         </div>
         <div class="beforeAfter-text">
           <h4>How to remove Super Long Mascara EX:</h4>
