mobile 1st draft

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
   </section> <!-- intro -->
   <section id="products">
-    <div class="slm sectionRow">
-      <div class="slmText width50">
+    <div class="slm">
+      <div class="slmText">
         <h2><span class="font400">NEW</span> Super Long<br>Mascara EX</h2>
         <p>Dramatic length and advanced protection</p>
       </div>
@@ -42,20 +42,20 @@
         <img src="./images/slm.jpg" alt="">
       </div>
     </div>
-    <div class="mpp sectionRow">
-      <div class="mppImg">
-        <img src="./images/mpp.jpg" alt="">
-      </div>
-      <div class="mppText width50">
+    <div class="mpp">
+      <div class="mppText">
         <h2>Mascara Perfect Pro<br>Double Protection</h2>
         <p>Brilliant definition and long-lasting wear</p>
+      </div>
+      <div class="mppImg">
+        <img src="./images/mpp.jpg" alt="">
       </div>
     </div>
   </section> <!-- products -->
   <section id="choose">
     <div class="chooseSlm sectionRow">
       <div class="chooseSlm-text">
-        <h3>Choose When <br>You Want ...</h3>
+        <h3>Choose When You Want ...</h3>
         <h4>Lush, long fringe for<br>maximum impact.</h4>
         <p>Our advanced Japanese formula blends lash fibers of 3 different lengths for a more dramatic lengthening effect. Enjoy your most striking lash look yet.</p>
       </div>
@@ -68,7 +68,7 @@
         <img src="./images/mpp-ribbon.jpg" alt="">
       </div>
        <div class="chooseMpp-text">
-         <h3>Choose When <br>You Want ...</h3>
+         <h3>Choose When You Want ...</h3>
          <h4>A polished, but natural,<br>look for everyday wear.</h4>
          <p>Innovative Japanese tube technology wraps each lash in polymer tubes for budge-proof wear. Fine-bristled brush offers precise application on the tiniest lashes.</p>
       </div>
