mobile & desktop drafts complete

--- a/index.html
+++ b/index.html
@@ -120,10 +120,14 @@
       <div class="beforeAfter-l">
         <h5>Mascara Perfect Pro Double Protection</h5>
         <div class="beforeAfter-imgs">
-          <img class="beforeImg" src="./images/mpp-before.jpg" alt="before applying Mascara Perfect Pro Double Protection">
-          <img src="./images/mpp-after.jpg" alt="after applying Mascara Perfect Pro Double Protection">
-          <h6 class="beforeText">Before</h6>
-          <h6>After</h6>
+          <div class="beforePic">
+            <img class="beforeImg" src="./images/mpp-before.jpg" alt="before applying Mascara Perfect Pro Double Protection">
+            <h6>Before</h6>
+          </div>
+          <div class="afterPic">
+            <img src="./images/mpp-after.jpg" alt="after applying Mascara Perfect Pro Double Protection">
+            <h6>After</h6>
+          </div>
         </div>
         <div class="beforeAfter-text">
           <h4>How to remove Mascara Perfect Pro:</h4>
@@ -133,10 +137,14 @@
       <div class="beforeAfter-r">
         <h5><span class="font400">NEW</span> Super Long Mascara EX</h5>
         <div class="beforeAfter-imgs">
-          <img class="beforeImg" src="./images/slm-before.jpg" alt="before applying Super Long Mascara EX">
-          <img src="./images/slm-after.jpg" alt="after applying Super Long Mascara EX">
-          <h6 class="beforeText">Before</h6>
-          <h6>After</h6>
+          <div class="beforePic">
+            <img class="beforeImg" src="./images/slm-before.jpg" alt="before applying Super Long Mascara EX">
+            <h6>Before</h6>
+          </div>
+          <div class="afterPic">
+            <img src="./images/slm-after.jpg" alt="after applying Super Long Mascara EX">
+            <h6>After</h6>
+          </div>
         </div>
         <div class="beforeAfter-text">
           <h4>How to remove Super Long Mascara EX:</h4>
