tablet draft done

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section id="products">
     <div class="slm">
       <div class="slmText">
-        <h2><span class="font400">NEW</span> Super Long<br>Mascara EX</h2>
+        <h2><span class="font400">NEW</span> Super Long Mascara EX</h2>
         <p>Dramatic length and advanced protection</p>
       </div>
       <div class="slmImg">
@@ -44,7 +44,7 @@
     </div>
     <div class="mpp">
       <div class="mppText">
-        <h2>Mascara Perfect Pro<br>Double Protection</h2>
+        <h2>Mascara Perfect Pro Double Protection</h2>
         <p>Brilliant definition and long-lasting wear</p>
       </div>
       <div class="mppImg">
@@ -85,9 +85,9 @@
       </div>
       <div class="differencesText-l">
         <ul>
-          <li>Our proprietary gel formula binds fibers of three different lengths for a more natural lengthening effect.</li>
-          <li>Buildable hydrolyzed silk formula creates long, lush fringe that lasts up to eight hours without smudging.</li>
-          <li>Curved brush makes it easy to apply with precision while adding a gentle curl.</li>
+          <li>Japanese tube technology creates a strong, water-resistant tube around each lash with flexible polymers.</li>
+          <li>Lengthens and defines lashes without flaking, smearing or clumping.</li>
+          <li>Fine-bristled, flexible wand reaches the tiniest lashes, even on the lower lash line.</li>
         </ul>
       </div>
 
@@ -101,9 +101,9 @@
       </div>
       <div class="differencesText-r">
         <ul>
-          <li>Japanese tube technology creates a strong, water-resistant tube around each lash with flexible polymers.</li>
-          <li>Lengthens and defines lashes without flaking, smearing or clumping.</li>
-          <li>Fine-bristled, flexible wand reaches the tiniest lashes, even on the lower lash line.</li>
+          <li>Our proprietary gel formula binds fibers of three different lengths for a more natural lengthening effect.</li>
+          <li>Buildable hydrolyzed silk formula creates long, lush fringe that lasts up to eight hours without smudging.</li>
+          <li>Curved brush makes it easy to apply with precision while adding a gentle curl.</li>
         </ul>
       </div>
     </div>
@@ -138,7 +138,7 @@
         <h5><span class="font400">NEW</span> Super Long Mascara EX</h5>
         <div class="beforeAfter-imgs">
           <div class="beforePic">
-            <img class="beforeImg" src="./images/slm-before.jpg" alt="before applying Super Long Mascara EX">
+            <img src="./images/slm-before.jpg" alt="before applying Super Long Mascara EX">
             <h6>Before</h6>
           </div>
           <div class="afterPic">
