--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h1>Mascaras for <br>Every Mood</h1>
       <h5>Open your eyes to infinite new looks!</h5>
       <p>Now, it's easier than ever to find your perfect mascara. Choose from our high-performance Japanese tube technology or triple-fiber gel formulations.</p>
-      <h6><a class="btn" href="https://www.dhccare.com/dhc-mascaras">Shop Now</a></h6>
+      <h6><a class="btn" href="/shop/makeup.html">Shop Now</a></h6>
     </div>
   </section> <!-- intro -->
   <section id="products">
